--- a/source/_patterns/components/03-cards/00-card.hbs
+++ b/source/_patterns/components/03-cards/00-card.hbs
@@ -43,10 +43,10 @@
       </label>
     {{/if}}
     {{#if cardTitleIconLarge}}
-        <div class="pf-card__top-element">{{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--lg" }}</div>
+        <div class="pf-card__top-element">{{> basics-icon iconFamily="pf-icon" iconName="pf-icon-middleware" iconModifier="pf-icon--circle pf-icon--lg" }}</div>
     {{/if}}
     {{#if cardTitleIconMedium}}
-        <div class="pf-card__top-element">{{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--md" }}</div>
+        <div class="pf-card__top-element">{{> basics-icon iconFamily="pf-icon" iconName="pf-icon-middleware" iconModifier="pf-icon--circle pf-icon--md" }}</div>
     {{/if}}
     {{#if cardKebab}}
       {{> basics-dropdown isKebab=true pullright=true }}
