--- a/source/scss/_pf-basic-variables.scss
+++ b/source/scss/_pf-basic-variables.scss
@@ -62,72 +62,79 @@ $fa-font-path: "../fonts";
 $pf-font-path: "../fonts";
 // $pf-icon-font-name-fa:  "FontAwesome" !default;
 $pf-icon-font-name:  "PatternFlyIcons-webfont";
-$pf-icon-prefix:  pficon;
+$pf-icon-prefix:  pf-icon;
 
-$pficon-var-add-circle-o:                                           "\e61b";
-$pficon-var-middleware:                                             "\e917";
-$pficon-var-blueprint:                                              "\e915";
-$pficon-var-build:                                                  "\e902";
-$pficon-var-builder-image:                                          "\e800";
-$pficon-var-bundle:                                                 "\e918";
-$pficon-var-close:                                                  "\e60b";
-$pficon-var-cloud-security:                                         "\e903";
-$pficon-var-cloud-tenant:                                           "\e904";
-$pficon-var-cluster:                                                "\e620";
-$pficon-var-container-node:                                         "\e621";
-$pficon-var-cpu:                                                    "\e905";
-$pficon-var-delete:                                                 "\e611";
-$pficon-var-domain:                                                 "\e919";
-$pficon-var-edit:                                                   "\e60a";
-$pficon-var-enterprise:                                             "\e906";
-$pficon-var-error-circle-o:                                         "\e61d";
-$pficon-var-export:                                                 "\e616";
-$pficon-var-flag:                                                   "\e603";
-$pficon-var-flavor:                                                 "\e907";
-$pficon-var-folder-close:                                           "\e607";
-$pficon-var-folder-open:                                            "\e606";
-$pficon-var-help:                                                   "\e605";
-$pficon-var-history:                                                "\e617";
-$pficon-var-home:                                                   "\e618";
-$pficon-var-image:                                                  "\e61f";
-$pficon-var-import:                                                 "\e615";
-$pficon-var-info:                                                   "\e604";
-$pficon-var-kubernetes:                                             "\e627";
-$pficon-var-memory:                                                 "\e908";
-$pficon-var-network:                                                "\e909";
-$pficon-var-ok:                                                     "\e602";
-$pficon-var-openshift:                                              "\e626";
-$pficon-var-private:                                                "\e914";
-$pficon-var-print:                                                  "\e612";
-$pficon-var-project:                                                "\e622";
-$pficon-var-regions:                                                "\e90a";
-$pficon-var-registry:                                               "\e623";
-$pficon-var-replicator:                                             "\e624";
-$pficon-var-repository:                                             "\e90b";
-$pficon-var-resource-pool:                                          "\e90c";
-$pficon-var-resources-almost-full:                                  "\e912";
-$pficon-var-resources-full:                                         "\e913";
-$pficon-var-restart:                                                "\e613";
-$pficon-var-route:                                                  "\e625";
-$pficon-var-running:                                                "\e614";
-$pficon-var-save:                                                   "\e601";
-$pficon-var-screen:                                                 "\e600";
-$pficon-var-server:                                                 "\e90d";
-$pficon-var-server-group:                                           "\e91a";
-$pficon-var-service:                                                "\e61e";
-$pficon-var-settings:                                               "\e610";
-$pficon-var-storage-domain:                                         "\e90e";
-$pficon-var-tenant:                                                 "\e916";
-$pficon-var-thumb-tack-o:                                           "\e609";
-$pficon-var-topology:                                               "\e608";
-$pficon-var-trend-down:                                             "\e900";
-$pficon-var-trend-up:                                               "\e901";
-$pficon-var-user:                                                   "\e60e";
-$pficon-var-users:                                                  "\e60f";
-$pficon-var-virtual-machine:                                        "\e90f";
-$pficon-var-volume:                                                 "\e910";
-$pficon-var-warning-triangle-o:                                     "\e61c";
-$pficon-var-zone:                                                   "\e911";
+
+// Patternfly Icons
+
+$pf-icon-size-lg: 3.3rem;
+$pf-icon-size-md: 1.75rem;
+$pf-icon-size-sm: 1.5rem;
+
+$pf-icon-var-add-circle-o:                                           "\e61b";
+$pf-icon-var-middleware:                                             "\e917";
+$pf-icon-var-blueprint:                                              "\e915";
+$pf-icon-var-build:                                                  "\e902";
+$pf-icon-var-builder-image:                                          "\e800";
+$pf-icon-var-bundle:                                                 "\e918";
+$pf-icon-var-close:                                                  "\e60b";
+$pf-icon-var-cloud-security:                                         "\e903";
+$pf-icon-var-cloud-tenant:                                           "\e904";
+$pf-icon-var-cluster:                                                "\e620";
+$pf-icon-var-container-node:                                         "\e621";
+$pf-icon-var-cpu:                                                    "\e905";
+$pf-icon-var-delete:                                                 "\e611";
+$pf-icon-var-domain:                                                 "\e919";
+$pf-icon-var-edit:                                                   "\e60a";
+$pf-icon-var-enterprise:                                             "\e906";
+$pf-icon-var-error-circle-o:                                         "\e61d";
+$pf-icon-var-export:                                                 "\e616";
+$pf-icon-var-flag:                                                   "\e603";
+$pf-icon-var-flavor:                                                 "\e907";
+$pf-icon-var-folder-close:                                           "\e607";
+$pf-icon-var-folder-open:                                            "\e606";
+$pf-icon-var-help:                                                   "\e605";
+$pf-icon-var-history:                                                "\e617";
+$pf-icon-var-home:                                                   "\e618";
+$pf-icon-var-image:                                                  "\e61f";
+$pf-icon-var-import:                                                 "\e615";
+$pf-icon-var-info:                                                   "\e604";
+$pf-icon-var-kubernetes:                                             "\e627";
+$pf-icon-var-memory:                                                 "\e908";
+$pf-icon-var-network:                                                "\e909";
+$pf-icon-var-ok:                                                     "\e602";
+$pf-icon-var-openshift:                                              "\e626";
+$pf-icon-var-private:                                                "\e914";
+$pf-icon-var-print:                                                  "\e612";
+$pf-icon-var-project:                                                "\e622";
+$pf-icon-var-regions:                                                "\e90a";
+$pf-icon-var-registry:                                               "\e623";
+$pf-icon-var-replicator:                                             "\e624";
+$pf-icon-var-repository:                                             "\e90b";
+$pf-icon-var-resource-pool:                                          "\e90c";
+$pf-icon-var-resources-almost-full:                                  "\e912";
+$pf-icon-var-resources-full:                                         "\e913";
+$pf-icon-var-restart:                                                "\e613";
+$pf-icon-var-route:                                                  "\e625";
+$pf-icon-var-running:                                                "\e614";
+$pf-icon-var-save:                                                   "\e601";
+$pf-icon-var-screen:                                                 "\e600";
+$pf-icon-var-server:                                                 "\e90d";
+$pf-icon-var-server-group:                                           "\e91a";
+$pf-icon-var-service:                                                "\e61e";
+$pf-icon-var-settings:                                               "\e610";
+$pf-icon-var-storage-domain:                                         "\e90e";
+$pf-icon-var-tenant:                                                 "\e916";
+$pf-icon-var-thumb-tack-o:                                           "\e609";
+$pf-icon-var-topology:                                               "\e608";
+$pf-icon-var-trend-down:                                             "\e900";
+$pf-icon-var-trend-up:                                               "\e901";
+$pf-icon-var-user:                                                   "\e60e";
+$pf-icon-var-users:                                                  "\e60f";
+$pf-icon-var-virtual-machine:                                        "\e90f";
+$pf-icon-var-volume:                                                 "\e910";
+$pf-icon-var-warning-triangle-o:                                     "\e61c";
+$pf-icon-var-zone:                                                   "\e911";
 
 // Colors
 //
@@ -305,11 +312,6 @@ $font-size-relative-base: 1em !default;
 $font-size-relative-lg:   1.25em !default;
 $font-size-relative-sm:   .875em !default;
 $font-size-relative-xs:   .75em !default;
-
-
-$icon-size-lg: 3.3rem;
-$icon-size-md: 1.75rem;
-$icon-size-sm: 1.5rem;
 
 // Tables
 //
