--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -55,7 +55,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/input-group";
 @import "node_modules/bootstrap/scss/custom-forms";
 @import "node_modules/bootstrap/scss/nav";
-@import "pf-basic-tabs";
+@import "pf-basic-nav";
 @import "node_modules/bootstrap/scss/navbar";
 @import "node_modules/bootstrap/scss/card";
 @import "pf-component-card";
