--- a/source/scss/_pf-basic-icons.scss
+++ b/source/scss/_pf-basic-icons.scss
@@ -238,10 +238,10 @@ limitations under the License.
 
 // Display icon at large or medium size
 .pf-icon--lg {
-  font-size: $icon-size-lg;
+  font-size: $pf-icon-size-lg;
 }
 .pf-icon--md {
-  font-size: $icon-size-md;
+  font-size: $pf-icon-size-md;
 }
 
 // Display circle around the icon
