--- a/source/scss/_pf-basic-variables.scss
+++ b/source/scss/_pf-basic-variables.scss
@@ -203,9 +203,9 @@ $pf-opacity-dark:   0.85;
 $spacer:   1rem;
 $pf-spacer-xxxs:   ($spacer * .25);   // ~3px
 $pf-spacer-xxs:    ($spacer * .5);    // 7px
-$pf-spacer-xs:     ($spacer * .7);   // ~10px
+$pf-spacer-xs:     ($spacer * .7);    // ~10px
 $pf-spacer-sm:     $spacer;           // 14px
-$pf-spacer-md:     ($spacer * 1.25);  // ~17px
+$pf-spacer-md:     ($spacer * 1.21);  // ~17px
 $pf-spacer-lg:     ($spacer * 1.5);   // 21px
 $pf-spacer-xl:     ($spacer * 1.75);  // ~24px
 $pf-spacer-xxl:    ($spacer * 2);     // 28 px
@@ -283,7 +283,7 @@ $font-family-monospace:  “overpass-mono”, Overpass-mono, Menlo, Monaco, Cons
 
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root: 14px;
+$font-size-root: 14px !default;
 
 $font-size-base: 1rem !default;
 $font-size-lg:   1.142857rem !default; // ~16px
@@ -523,7 +523,7 @@ $state-danger-border:            $brand-danger;
 
 $alert-padding-x:             $spacer;
 $alert-link-font-weight:      normal;
-$pf-alert-icon-font-size:     $icon-size-sm;
+$pf-alert-icon-font-size:     $pf-icon-size-sm;
 
 
 // Tabs
