--- a/source/scss/_pf-component-card.scss
+++ b/source/scss/_pf-component-card.scss
@@ -61,7 +61,7 @@ limitations under the License.
   }
 }
 .pf-card__top-element { margin-bottom: $pf-spacer-md; }
-.pf-card--accented { border-top: 2px solid $color-pf-blue-300; }
+.pf-card--accented { border-top: 2px solid $pf-color-blue-300; }
 .pf-card--select {
   border: 2px solid transparent;
   background-clip: content-box;
