--- a/source/scss/_pf-basic-colors.scss
+++ b/source/scss/_pf-basic-colors.scss
@@ -17,88 +17,88 @@ limitations under the License.
 // PatternFly Colors
 // --------------------------------------------------
 
-$color-pf-black-100:             #fafafa;
-$color-pf-black-150:             #f5f5f5;
-$color-pf-black-200:             #ededed;
-$color-pf-black-300:             #d1d1d1;
-$color-pf-black-400:             #bbb;
-$color-pf-black-500:             #8b8d8f;
-$color-pf-black-600:             #72767b;
-$color-pf-black-700:             #4d5258;
-$color-pf-black-800:             #393f44;
-$color-pf-black-900:             #292e34;
-$color-pf-black-1000:            #030303;
-$color-pf-blue-50:               #def3ff;
-$color-pf-blue-100:              #bee1f4;
-$color-pf-blue-200:              #7dc3e8;
-$color-pf-blue-300:              #39a5dc;
-$color-pf-blue-400:              #0088ce;
-$color-pf-blue-500:              #00659c;
-$color-pf-blue-600:              #004368;
-$color-pf-blue-700:              #002235;
-$color-pf-cyan-100:              #bedee1;
-$color-pf-cyan-200:              #7dbdc3;
-$color-pf-cyan-300:              #3a9ca6;
-$color-pf-cyan-400:              #007a87;
-$color-pf-cyan-500:              #005c66;
-$color-pf-cyan-600:              #003d44;
-$color-pf-cyan-700:              #001f22;
-$color-pf-gold-100:              #fbeabc;
-$color-pf-gold-200:              #f9d67a;
-$color-pf-gold-300:              #f5c12e;
-$color-pf-gold-400:              #f0ab00;
-$color-pf-gold-500:              #b58100;
-$color-pf-gold-600:              #795600;
-$color-pf-gold-700:              #3d2c00;
-$color-pf-green-100:             #cfe7cd;
-$color-pf-green-200:             #9ecf99;
-$color-pf-green-300:             #6ec664;
-$color-pf-green-400:             #3f9c35;
-$color-pf-green-500:             #2d7623;
-$color-pf-green-600:             #1e4f18;
-$color-pf-green-700:             #0f280d;
-$color-pf-light-blue-100:        #beedf9;
-$color-pf-light-blue-200:        #7cdbf3;
-$color-pf-light-blue-300:        #35caed;
-$color-pf-light-blue-400:        #00b9e4;
-$color-pf-light-blue-500:        #008bad;
-$color-pf-light-blue-600:        #005c73;
-$color-pf-light-blue-700:        #002d39;
-$color-pf-light-green-100:       #e4f5bc;
-$color-pf-light-green-200:       #c8eb79;
-$color-pf-light-green-300:       #ace12e;
-$color-pf-light-green-400:       #92d400;
-$color-pf-light-green-500:       #6ca100;
-$color-pf-light-green-600:       #486b00;
-$color-pf-light-green-700:       #253600;
-$color-pf-orange-100:            #fbdebf;
-$color-pf-orange-200:            #f7bd7f;
-$color-pf-orange-300:            #f39d3c;
-$color-pf-orange-400:            #ec7a08;
-$color-pf-orange-500:            #b35c00;
-$color-pf-orange-600:            #773d00;
-$color-pf-orange-700:            #3b1f00;
-$color-pf-purple-100:            #c7bfff;
-$color-pf-purple-200:            #a18fff;
-$color-pf-purple-300:            #8461f7;
-$color-pf-purple-400:            #703fec;
-$color-pf-purple-500:            #582fc0;
-$color-pf-purple-600:            #40199a;
-$color-pf-purple-700:            #1f0066;
-$color-pf-red-100:               #cc0000;
-$color-pf-red-200:               #a30000;
-$color-pf-red-300:               #8b0000;
-$color-pf-red-400:               #470000;
-$color-pf-red-500:               #2c0000;
+$pf-color-black-100:             #fafafa;
+$pf-color-black-150:             #f5f5f5;
+$pf-color-black-200:             #ededed;
+$pf-color-black-300:             #d1d1d1;
+$pf-color-black-400:             #bbb;
+$pf-color-black-500:             #8b8d8f;
+$pf-color-black-600:             #72767b;
+$pf-color-black-700:             #4d5258;
+$pf-color-black-800:             #393f44;
+$pf-color-black-900:             #292e34;
+$pf-color-black-1000:            #030303;
+$pf-color-blue-50:               #def3ff;
+$pf-color-blue-100:              #bee1f4;
+$pf-color-blue-200:              #7dc3e8;
+$pf-color-blue-300:              #39a5dc;
+$pf-color-blue-400:              #0088ce;
+$pf-color-blue-500:              #00659c;
+$pf-color-blue-600:              #004368;
+$pf-color-blue-700:              #002235;
+$pf-color-cyan-100:              #bedee1;
+$pf-color-cyan-200:              #7dbdc3;
+$pf-color-cyan-300:              #3a9ca6;
+$pf-color-cyan-400:              #007a87;
+$pf-color-cyan-500:              #005c66;
+$pf-color-cyan-600:              #003d44;
+$pf-color-cyan-700:              #001f22;
+$pf-color-gold-100:              #fbeabc;
+$pf-color-gold-200:              #f9d67a;
+$pf-color-gold-300:              #f5c12e;
+$pf-color-gold-400:              #f0ab00;
+$pf-color-gold-500:              #b58100;
+$pf-color-gold-600:              #795600;
+$pf-color-gold-700:              #3d2c00;
+$pf-color-green-100:             #cfe7cd;
+$pf-color-green-200:             #9ecf99;
+$pf-color-green-300:             #6ec664;
+$pf-color-green-400:             #3f9c35;
+$pf-color-green-500:             #2d7623;
+$pf-color-green-600:             #1e4f18;
+$pf-color-green-700:             #0f280d;
+$pf-color-light-blue-100:        #beedf9;
+$pf-color-light-blue-200:        #7cdbf3;
+$pf-color-light-blue-300:        #35caed;
+$pf-color-light-blue-400:        #00b9e4;
+$pf-color-light-blue-500:        #008bad;
+$pf-color-light-blue-600:        #005c73;
+$pf-color-light-blue-700:        #002d39;
+$pf-color-light-green-100:       #e4f5bc;
+$pf-color-light-green-200:       #c8eb79;
+$pf-color-light-green-300:       #ace12e;
+$pf-color-light-green-400:       #92d400;
+$pf-color-light-green-500:       #6ca100;
+$pf-color-light-green-600:       #486b00;
+$pf-color-light-green-700:       #253600;
+$pf-color-orange-100:            #fbdebf;
+$pf-color-orange-200:            #f7bd7f;
+$pf-color-orange-300:            #f39d3c;
+$pf-color-orange-400:            #ec7a08;
+$pf-color-orange-500:            #b35c00;
+$pf-color-orange-600:            #773d00;
+$pf-color-orange-700:            #3b1f00;
+$pf-color-purple-100:            #c7bfff;
+$pf-color-purple-200:            #a18fff;
+$pf-color-purple-300:            #8461f7;
+$pf-color-purple-400:            #703fec;
+$pf-color-purple-500:            #582fc0;
+$pf-color-purple-600:            #40199a;
+$pf-color-purple-700:            #1f0066;
+$pf-color-red-100:               #cc0000;
+$pf-color-red-200:               #a30000;
+$pf-color-red-300:               #8b0000;
+$pf-color-red-400:               #470000;
+$pf-color-red-500:               #2c0000;
 
-$color-pf-white:                 #fff;
+$pf-color-white:                 #fff;
 
-// $color-pf-blue:                  $color-pf-blue-400;
-// $color-pf-cyan:                  $color-pf-cyan-400;
-// $color-pf-gold:                  $color-pf-gold-400;
-// $color-pf-green:                 $color-pf-green-400;
-// $color-pf-light-blue:            $color-pf-light-blue-400;
-// $color-pf-light-green:           $color-pf-light-green-400;
-// $color-pf-orange:                $color-pf-orange-400;
-// $color-pf-purple:                $color-pf-purple-400;
-// $color-pf-red:                   $color-pf-red-100;
+// $pf-color-blue:                  $pf-color-blue-400;
+// $pf-color-cyan:                  $pf-color-cyan-400;
+// $pf-color-gold:                  $pf-color-gold-400;
+// $pf-color-green:                 $pf-color-green-400;
+// $pf-color-light-blue:            $pf-color-light-blue-400;
+// $pf-color-light-green:           $pf-color-light-green-400;
+// $pf-color-orange:                $pf-color-orange-400;
+// $pf-color-purple:                $pf-color-purple-400;
+// $pf-color-red:                   $pf-color-red-100;
